--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 # Site Settings
 locale                   : "en-US"
 title                    :
-title_separator          : "-"
+title_separator          :
 name                     : &name "Hengzhi Wang"
 description              : &description "Homepage"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://hz1219.github.io"
+url                      : https://hz1219.github.io # the base hostname & protocol for your site e.g. "https://hz1219.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
