--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Hengzhi Wang"
   avatar           : "whz.png"
-  bio              : 
-  location         : "Shenzhen, China"
+  bio              : "Assistant Professor"
+  location         : "Shenzhen University"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=VypaEDUAAAAJ"
