--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hengzhi Wang"
-  avatar           : "whz_szu.png"
+  avatar           : "whz-1.png"
   bio              : "Assistant Professor"
   location         : "Shenzhen University"
   employer         :
